erDiagram
    TENANTS ||--o{ ORGANIZATION_UNITS : "has"
    TENANTS ||--o{ USERS : "has (via user_tenants)"
    TENANTS ||--o{ ENABLED_FEATURES : "has"
    TENANTS ||--o{ CHART_OF_ACCOUNTS : "has"
    TENANTS ||--o{ DOCUMENTS : "has"
    TENANTS ||--o{ PARTIES : "has"
    TENANTS ||--o{ PRODUCTS : "has"
    TENANTS ||--o{ WAREHOUSES : "has"
    TENANTS ||--o{ SEQUENCES : "has"
    
    ORGANIZATION_UNITS ||--o{ DOCUMENTS : "scopes"
    ORGANIZATION_UNITS ||--o{ STOCK_ITEMS : "scopes (via warehouse)"
    ORGANIZATION_UNITS ||--o{ WAREHOUSES : "assigned to"

    PARTIES ||--o{ DOCUMENTS : "involved in"
    PARTIES ||--o{ PAYMENTS : "pays/receives"

    DOCUMENTS ||--o{ DOCUMENT_ITEMS : "has"
    DOCUMENT_TYPES ||--o{ DOCUMENTS : "categorizes"
    DOCUMENTS ||--o{ DOCUMENT_LINKS : "source/target"

    PRODUCTS ||--o{ DOCUMENT_ITEMS : "referenced by"
    PRODUCTS ||--o{ STOCK_ITEMS : "has inventory"
    WAREHOUSES ||--o{ STOCK_ITEMS : "contains"
    STOCK_MOVEMENTS }o--|| PRODUCTS : "tracks"
    STOCK_MOVEMENTS }o--|| WAREHOUSES : "at"

    JOURNAL_ENTRIES ||--o{ JOURNAL_ENTRY_LINES : "has"
    CHART_OF_ACCOUNTS ||--o{ JOURNAL_ENTRY_LINES : "used in"

    PAYMENTS ||--o{ PAYMENT_ALLOCATIONS : "allocates"
    DOCUMENTS ||--o{ PAYMENT_ALLOCATIONS : "receive allocation"

    ATTACHMENTS }o--|| TENANTS : "belongs"
    COMMENTS }o--|| TENANTS : "belongs"
    ENTITY_ATTRIBUTES }o--|| TENANTS : "belongs"